# MWPCore

./: .gitignore  CMakeLists.txt  MWP-ICD.xlsm  README.md  h2o.sh  kill_h2o.sh  monitor_canonical_name_map.md
Blynk/: CMakeLists.txt  Makefile  blynkWater  blynkWater.c
BlynkAlert/: CMakeLists.txt  INSTALL_ALARMS.md  blynkAlert  blynkAlert.c
HouseMonitor/: CMakeLists.txt  housemonitor  housemonitor.c
IrrigationMonitor/: CMakeLists.txt  irrigationmonitor  irrigationmonitor.c
Monitor/: CMakeLists.txt  monitor  monitor.c
RainbirdMon/: CMakeLists.txt  rainbirdmon  rainbirdmon.c
SysAlert/: CMakeLists.txt  alert  alert.c
SysAlertMon/: CMakeLists.txt  SysAlertMon  sysAlertMon.c
TankMonitor/: CMakeLists.txt  simplified_tankmonitor.c  tankmonitor  tankmonitor.c
Well3Monitor/: CMakeLists.txt  well3monitor  well3monitor.c
WellMonitor/: CMakeLists.txt  welldatalogger.csv  wellmonitor  wellmonitor.c
alarm_engine/: alarm_config.h  alarm_data_types.h  alarm_logic.c.inc
include/: water.h
mylib/: Makefile  flowmon.c  msgarrvd.c  publogmsg.c
pyrainbird/: RainbirdSync.py
scripts/: README.md  alarms.csv  generate_alarms.py  generate_alarms.py.orig
scripts/CheaderVBA/include/: MilanoWaterProject\Code\alert.h  MilanoWaterProject\IrrigationHeader.h  \IrrigationHeader.h
scripts/CheaderVBA/vba/: cheader.bas
